<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imgBembos"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/bembos_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBembos"
        android:layout_marginStart="20dp"/>


    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintTop_toBottomOf="@id/txt_email"/>

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/text_pws"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        android:layout_marginStart="20dp"/>


    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        app:layout_constraintTop_toBottomOf="@id/txt_password"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="19dp"
        android:text="@string/btn_login"
        android:backgroundTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toStartOf="@+id/btn_register"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="19dp"
        android:text="@string/btn_register"
        android:backgroundTint="@color/white_alt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toEndOf="@+id/btn_login"/>

    <TextView
        android:id="@+id/txt_recuperar"
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginTop="20dp"
        android:textSize="11sp"
        android:hint="@string/txt_recuperar"
        app:layout_constraintTop_toBottomOf="@id/btn_register"
        app:layout_constraintEnd_toEndOf="@id/btn_register"/>

    <TextView
        android:id="@+id/txt_redes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/txt_redes"
        app:layout_constraintTop_toBottomOf="@id/txt_recuperar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:text="@string/btn_google"
        android:backgroundTint="@color/red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_redes"
        app:layout_constraintEnd_toStartOf="@+id/btn_register"/>

    <Button
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="19dp"
        android:backgroundTint="@color/blue_sky"
        android:text="@string/btn_facebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_google"
        app:layout_constraintEnd_toStartOf="@+id/btn_register"/>



</androidx.constraintlayout.widget.ConstraintLayout>